--- a/app/src/main/res/layout/spinner.xml
+++ b/app/src/main/res/layout/spinner.xml
@@ -15,6 +15,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/down_arrow" />
+        android:src="@mipmap/down_arrow" />
 
 </RelativeLayout>
